# MusicDecoder

./: README.md  requirements.txt
NetEaseMusic/: CMakeLists.txt  README.md  main.cpp  ncmdump  setup.py
NetEaseMusic/NcmCrypt/: ncmcrypt.cpp  ncmcrypt.h
QQMusic/: CMakeLists.txt  DecryptionAlgorithm.hpp  QQMusicDecoder.cpp  README.md  setup.py
QQMusic/QQMusicDecoder.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
QQMusic/QQMusicDecrypt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
apps/: main.py
apps/audio/: getAudioInfo.py  modifyAudioInfo.py
apps/config/: logger.py
apps/decrypt/: decoder.py  decryptAudioFile.py
apps/douban/: douban.py
apps/music/: config.py  douban.py  douban_bundle.js  netease.py  qqmusic.py
